# darker

./: CHANGES.rst  README.rst  constraints-oldest.txt  mypy.ini  setup.cfg
.github/actions/commit-range/: action.yml
.github/workflows/: bandit.yml  python-package.yml
action/: main.py
src/darker/: __main__.py  command_line.py  diff.py  git.py  help.py  utils.py  verification.py
src/darker/tests/: test_command_line.py  test_git.py  test_main.py  test_main_blacken_single_file.py  test_verification.py
