[metadata]
name = darker
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
summary = Apply Black formatting only in regions changed since last commit
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/akaihola/darker
license = BSD
license_file = LICENSE.rst
requires-python = >=3.6
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code = https://github.com/akaihola/darker
    Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst

[options]
install_requires =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    black>=21.5b1
    toml>=0.10.0
    typing-extensions ; python_version < "3.8"
# NOTE: remember to keep `.github/workflows/python-package.yml` in sync
#       with the minimum required Python version
python_requires = >=3.7

[files]
packages =
    darker
packages_root = src

[entry_points]
console_scripts =
    darker = darker.__main__:main_with_error_handling
pygments.lexers =
    lint_location = darker.highlighting.lexers:LocationLexer
    lint_description = darker.highlighting.lexers:DescriptionLexer

[options.extras_require]
isort =
    isort>=5.0.1
test =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    airium>=0.2.3
    bandit>=1.7.1
    black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
    codespell>=2.1.0
    defusedxml>=0.7.1
    flake8<4
    flake8-2020>=1.6.1
    flake8-bugbear>=22.1.11
    flake8-comprehensions>=3.7.0
    mypy>=0.940
    pygments
    pylint
    pytest>=6.1.0
    pytest-darker
    pytest-flake8>=1.0.6
    pytest-isort>=1.1.0
    pytest-kwparametrize>=0.0.3
    pytest-mypy
    pyupgrade>=2.31.0
    regex>=2021.4.4
    requests_cache>=0.7
    ruamel.yaml>=0.17.21
    safety>=1.10.3
    types-requests>=2.27.9
    types-toml>=0.10.4
release =
    airium>=0.2.3
    click>=8.0.0
    defusedxml>=0.7.1
    requests_cache>=0.7

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # C408 Unnecessary dict call - rewrite as a literal.
    C408
    # E231 missing whitespace after ','
    E231
    # W503 line break before binary operator
    W503

[codespell]
ignore-words-list = nd
skip = .git,*.json